--- a/inventory.ini
+++ b/inventory.ini
@@ -1,12 +1,12 @@
-[catalouge]
+[catalouge] # so ikkasa grp name ivvali so dhani kinda enni servers ithe connect ayyi vunatayo vati pvt ips anni aa grp kidhaiki vatundhi 
 172.31.26.71
 172.31.26.71
 
 
-[frontend]
-172.31.27.57
+[frontend] # this is syntax, so idhi kuda oka grp 
+172.31.64.213
 
-[cart]
+[cart] # so iidhi kuda 
 172.31.26.71
 
 ; [local]
