--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,6 +1,7 @@
 - name: "ping the server"
-  hosts: frontend # Which server you are connecting to
+  hosts: frontend # so ikkada .ini folder loki velli frontend ane grp vunte dhani kindha vunna all ips of server ni excute chestundhi...... Which server you are connecting to
   # List of tasks/collections/modules
-  tasks:
+  tasks: # so here antha same place lo one by one vundali
   - name: ping
-    ansible.builtin.ping:
+    ansible.builtin.ping: #The ansible.builtin.ping module is a core Ansible module used to test the connectivity and basic functionality between the Ansible control node and the managed hosts. It is a fundamental tool for verifying that Ansible can successfully communicate with and execute commands on remote systems. 
+###################################################
