--- a/03-multi-play.yaml
+++ b/03-multi-play.yaml
@@ -2,12 +2,15 @@
   hosts: frontend
   tasks:
   - name: PLAY-01 and TASK-01
-    ansible.builtin.debug:
+    ansible.builtin.debug: # so here echo ki edqual to debug.......
       msg: "Hello from PLAY-01 and TASK-01"
 
   - name: PLAY-01 and TASK-02
     ansible.builtin.debug:
       msg: "Hello from PLAY-01 and TASK-02"
+# the above is one play 
+
+# and the below one is another play
 - name: PLAY-02
   hosts: frontend
   tasks:
