--- a/05-task-vars.yaml
+++ b/05-task-vars.yaml
@@ -13,3 +13,4 @@
       msg: "Course name is: {{ COURSE }}, Duration is {{ DURATION }}, Trainer name is {{ Trainer }}"
 
 # here we did over written COURSE anedhi so called as Inheritance...........
+# SO eppudaina ala vunte 2 vars.. first prefference is to tasks lo vunte vatiki adhe print avuhundhi.....
