--- a/06-vars-files.yaml
+++ b/06-vars-files.yaml
@@ -1,2 +1,9 @@
 - name: variables from files
-  hosts:
+  hosts: local
+  connection: local
+  vars_failes:
+  - course.yaml
+  tasks:
+  - name: print the course info
+    ansible.builtin.debug:
+      msg: "Course name is: {{ COURSE }}, Duration is {{ DURATION }}, Trainer name is {{ Trainer }}"
