--- a/course.yaml
+++ b/course.yaml
@@ -1,5 +1,5 @@
 # idhi endhuku ante main files lo change chesukunda ee course.yaml ni create chesi manam kvalisina chota ee file ni call cheyachhu
 COURSE: DevOps with AWS
 DURATION: 10HRS
-Trainer: Sivakumar reddy
+Trainer: Srikanth Reddy Erugula
 #NAME: from files
