--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -5,7 +5,10 @@
   - name: username
     prompt: What is your username?
     private: false
+  - name: password
+    prompt: what is your password
+    private: false
   tasks: 
     - name: print credentials
       ansible.builtin.debug:
-        msg: "Hello, Username is: {{ username }}" # , Password is: {{ password }}"
+        msg: "Hello, Username is: {{ username }}, Password is: {{ password }}"
