--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -7,7 +7,7 @@
     private: false
   - name: password
     prompt: what is your password
-    private: false
+    private: false # so here false ani vunte enter chesetappudu visible avuthundhi, adhe true ani vunte wont visible
   tasks: 
     - name: print credentials
       ansible.builtin.debug:
