--- a/inventory.ini
+++ b/inventory.ini
@@ -13,7 +13,7 @@
 localhost
 
 [local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
-#NAME=from inventory
+NAME=from inventory
 COURSE=Ansible
 DURATION=10HRS
 TRAINER=Sivakumar
