--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local
   vars:
-    number: 5
+    number: 5 # so here condiron met ithe print or else skipping local msg world will be print
   tasks:
   - name: check number is less than 10 or not
     ansible.builtin.debug:
