--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -3,5 +3,5 @@
   connection: local
   tasks: 
   - name: default variable
-    asible.builtin.debug:
+    ansible.builtin.debug:
       msg: " Hello, {{ name }}"
