--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -4,4 +4,5 @@
   tasks: 
   - name: default variable
     ansible.builtin.debug:
-      msg: " Hello, {{ name }}"
+      # msg: " Hello, {{ name }}" # error is : "The task includes an option with an undefined variable.
+      msg: " Hello, {{ name | default('Srikanth') }}"
