--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -1,8 +1,14 @@
 - name: functions
   hosts: local
   connection: local
+  vars:
+    fruits: apple,banana,orange,mango,pineapple,guava,custardapple # these are all strings
   tasks: 
   - name: default variable
     ansible.builtin.debug:
       # msg: " Hello, {{ name }}" # error is : "The task includes an option with an undefined variable.
-      msg: " Hello, {{ name | default('Srikanth') }}"
+      msg: " Hello, {{ name | default('Srikanth') }}" #  so here under name not avilable at any value we need to use this cmd 
+
+  - name: convert string to list 
+    ansible.builtin.split:
+      msg: " Fruits are : {{ fruits | split(,) }}"
