--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -11,4 +11,4 @@
 
   - name: convert string to list 
     ansible.builtin.debug:
-      msg: " Fruits are : {{ fruits | split(,) }}"
+      msg: " Fruits are : {{ fruits | split(',') }}"
