--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -3,6 +3,10 @@
   connection: local
   vars:
     fruits: apple,banana,orange,mango,pineapple,guava,custardapple # these are all strings
+    # dictionary or map both are same
+    tags:
+      Application: payment
+      Environment: dev
   tasks: 
   - name: default variable
     ansible.builtin.debug:
@@ -12,3 +16,7 @@
   - name: convert string to list 
     ansible.builtin.debug:
       msg: " Fruits are : {{ fruits | split(',') }}"
+
+  - name: convert map to list
+    ansible.builtin.debug:
+      msg: " Tags are: {{ tags | dict2items }}"
