--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -7,6 +7,12 @@
     tags:
       Application: payment
       Environment: dev
+      # list 
+    listtags:
+      - key: Application
+        value: payment
+      - key: Environment
+        value: dev
   tasks: 
   - name: default variable
     ansible.builtin.debug:
@@ -20,3 +26,7 @@
   - name: convert map to list
     ansible.builtin.debug:
       msg: " Tags are: {{ tags | dict2items }}"
+  
+  - name: convert list into map
+    ansible.builtin.debug:
+      msg: " List tags are : {{ listtags | item2dict }}"
