--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -29,4 +29,4 @@
   
   - name: convert list into map
     ansible.builtin.debug:
-      msg: " List tags are : {{ listtags | item2dict }}"
+      msg: " List tags are : {{ listtags | items2dict }} "
