--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -30,3 +30,11 @@
   - name: convert list into map
     ansible.builtin.debug:
       msg: " List tags are : {{ listtags | items2dict }} "
+  
+  - name: read yaml and take it into variable
+    ansible.builtin.set_fact:
+      student_yaml: "{{ lookup('file', 'student.yaml') | from_yaml }}" # so here student.yaml file lo vuna content antha key varivale loki velli store avuthundi
+
+  - name: convert yaml into json
+    ansible.builtin.debug:
+      msg: "json: {{ student_yaml | to_json  }}"
