--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -3,6 +3,7 @@
   connection: local
   vars:
     fruits: apple,banana,orange,mango,pineapple,guava,custardapple # these are all strings
+    sriname: " Erugula Srikanth reddy"
     # dictionary or map both are same
     tags:
       Application: payment
@@ -43,3 +44,7 @@
     ansible.builtin.copy:
       dest: ./stundent-data.json
       content: "{{ student_yaml | to_nice_json  }}"
+
+  - name: convert uppercase
+    ansible.builtin.debug:
+      msg: "{{ sriname | upper }}"
