--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -58,3 +58,11 @@
   - name: check IP is valid or not
     ansible.builtin.debug: 
       msg: "{{ ipaddress | ansible.utils.ipv4 }}"
+
+  - name: grep for root
+    ansible.builtin.command: cat /etc/passwd | grep root
+    register: command_output # here cat /etc/passwd | grep root -- idi excute ayyi command_output loki vachhi store avuthundhi
+  
+  - name: print the command_output
+    ansible.builtin.debug:
+      msg: "{{ command_output }}"
