--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -60,7 +60,7 @@
       msg: "{{ ipaddress | ansible.utils.ipv4 }}"
 
   - name: grep for root
-    ansible.builtin.command: cat /etc/passwd | grep root
+    ansible.builtin.shell: cat /etc/passwd | grep root
     register: command_output # here cat /etc/passwd | grep root -- idi excute ayyi command_output loki vachhi store avuthundhi
   
   - name: print the command_output
