--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -60,9 +60,27 @@
       msg: "{{ ipaddress | ansible.utils.ipv4 }}"
 
   - name: grep for root
-    ansible.builtin.shell: cat /etc/passwd | grep root
+    ansible.builtin.shell: cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we need shell 
+    ansible.builtin.command: #cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we need shell 
     register: command_output # here cat /etc/passwd | grep root -- idi excute ayyi command_output loki vachhi store avuthundhi
   
   - name: print the command_output
     ansible.builtin.debug:
       msg: "{{ command_output }}"
+  
+  - name: redirect the output
+    ansible.builtin.command: ls -ltr > /tmp/output.txt # so here redirections and complex cmd vunte command mode lo excute avvadu... se we need to use shell mode
+    register: redirect_output # ee varibale loki .... ls -ltr > /tmp/output.txt excute ayyi result vastundhi
+    ignore_errors: true
+
+  - name: print redirect_output
+    ansible.builtin.debug:
+      msg: "{{ redirect_output }}"
+
+  - name: redirect the output using shell
+    ansible.builtin.shell: ls -ltr > /tmp/output.txt
+    register: redirect_output
+
+  - name: print redirect_output shell
+    ansible.builtin.debug:
+      msg: "{{ redirect_output }}"
