--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -71,7 +71,7 @@
   - name: redirect the output
     ansible.builtin.command: ls -ltr > /tmp/output.txt # so here redirections and complex cmd vunte command mode lo excute avvadu... se we need to use shell mode
     register: redirect_output # ee varibale loki .... ls -ltr > /tmp/output.txt excute ayyi result vastundhi
-    ignore_errors: true
+    #ignore_errors: true
 
   - name: print redirect_output
     ansible.builtin.debug:
