--- a/19-error-handling.yaml
+++ b/19-error-handling.yaml
@@ -12,6 +12,6 @@
     ansible.builtin.debug:
       msg: "{{ user_output }}"
 
-  # - name: create user
-  #   ansible.builtin.command: useradd roboshop
-  #   when: user_output.rc != 0
+  - name: create user
+    ansible.builtin.command: useradd roboshop
+    when: user_output.rc != 0
