--- a/03-multi-play.yaml
+++ b/03-multi-play.yaml
@@ -21,3 +21,22 @@
   - name: PLAY-02 and TASK-02
     ansible.builtin.debug:
       msg: "Hello from PLAY-02 and TASK-02"
+
+
+
+######### Practice section ##########
+
+- name: play-01
+  hosts: local
+  tasks:
+  - name: play-01 and task-01
+    ansible.builtin.debug: 
+      msg: " print this taks-01"
+
+- name: play-02
+  hosts: local
+  tasks: 
+  - name:
+    ansible.builtin.debug:
+      msg: " Hello Words"
+
