--- a/04-vars.yaml
+++ b/04-vars.yaml
@@ -1,5 +1,5 @@
 - name: paly level varibales
-  hosts: local # so here local host ani ichhinapudu adhi velli .ini lo search chestundhi 
+  hosts: local # so here local host ani ichhinapudu adhi velli .ini lo search chestundhi ..........# so here localhost ayina ivvachu
   connection: local # so here anisble is manageing without another server there is no dependency.. so for that we need set up .ini lo local ni ivvali oka grp.. ansuible ekkada ithe install ayyi vundho akkada connect avuthundhi ther is no dependent on frontend and any...
   vars: 
     COURSE: Ansible
