--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -4,11 +4,11 @@
   vars_prompt:
   - name: username
     prompt: What is your username?
-    private: false
-  - name: password # so here will get error when password haven't define ------ fatal: [localhost]: FAILED! => {"msg": "The task includes an option with an undefined variable. The error was: 'password' is undefined. 'password' is undefine
-    prompt: what is your password
-    private: false # so here false ani vunte enter chesetappudu visible avuthundhi, adhe true ani vunte wont visible
+    #private: false
+  #- name: password # so here will get error when password haven't define ------ fatal: [localhost]: FAILED! => {"msg": "The task includes an option with an undefined variable. The error was: 'password' is undefined. 'password' is undefine
+    #prompt: what is your password
+    #private: false # so here false ani vunte enter chesetappudu visible avuthundhi, adhe true ani vunte wont visible
   tasks: 
     - name: print credentials
       ansible.builtin.debug:
-        msg: "Hello, Username is: {{ username }}, Password is: {{ password }}"
+        msg: "Hello, Username is: {{ username }}" #, Password is: {{ password }}"
