--- a/practice.yaml
+++ b/practice.yaml
@@ -1,8 +1,19 @@
-- name: Print the vars_files
-  hosts: cart 
-  vars: 
-    SRI: kanth
-  tasks: 
-  - name: defined the vars
-    ansible.builtin.debug:
-      msg: "var sri is {{ SRI }}"
+# - name: Print the vars_files
+#   hosts: cart 
+#   vars: 
+#     SRI: kanth
+#   tasks: 
+#   - name: defined the vars
+#     ansible.builtin.debug:
+#       msg: "var sri is {{ SRI }}"
+
+- name: loops
+  hosts: local 
+  connection: local 
+  tasks:
+  - name: print the names
+    asnible.builtin.debug:
+      msg: " Hi {{ item }}"
+    loop:
+    - written
+    - dfg 
