--- a/practice.yaml
+++ b/practice.yaml
@@ -22,7 +22,7 @@
   hosts: local 
   connection: local
   tasks:
-  - name: print
+  #- name: print
     ansible.builtin.debug:
       msg: " Hi {{ item }}"
     loop:
