--- a/17-loops.yaml
+++ b/17-loops.yaml
@@ -3,7 +3,7 @@
   connection: local
   become: yes
   tasks:
-  - name: print names
+  - name: print names # manaki convinient names pettachu
     ansible.builtin.package:
       name: "{{ item.name }}"
       state: "{{ item.state }}"
