--- a/practice.yaml
+++ b/practice.yaml
@@ -30,26 +30,38 @@
 #     loop:
 #     - nginx
 
+# - name: functions
+#   hosts: local
+#   connection: local
+#   vars:
+#     fruits: apple,banana,orange,mango,pineapple,guava,custardapple # these are all strings
+#     # sriname: " Erugula Srikanth reddy"
+#     # gmail: Info@Gmail.com
+#     # ipaddress: "19222.168.0.1"
+#     # dictionary or map both are same
+#     tags:
+#       Application: payment
+#       Environment: dev
+#      # list:
+#     listtags:
+#       - key: Application
+#         value: payment
+#       - key: Environment
+#         value: dev
+#   tasks: 
+#   - name: default variable
+#     ansible.builtin.debug:
+#       # msg: " Hello, {{ name }}" # error is : "The task includes an option with an undefined variable.
+#       msg: " tags are {{ tags }}, listtags {{ listtags}}" #  so here under name not avilable at any value we need to use this cmd 
+
+#       #######################################################
+
+
+
 - name: functions
   hosts: local
   connection: local
-  vars:
-    fruits: apple,banana,orange,mango,pineapple,guava,custardapple # these are all strings
-    # sriname: " Erugula Srikanth reddy"
-    # gmail: Info@Gmail.com
-    # ipaddress: "19222.168.0.1"
-    # dictionary or map both are same
-    tags:
-      Application: payment
-      Environment: dev
-     # list:
-    listtags:
-      - key: Application
-        value: payment
-      - key: Environment
-        value: dev
   tasks: 
-  - name: default variable
+  - name: default vars
     ansible.builtin.debug:
-      # msg: " Hello, {{ name }}" # error is : "The task includes an option with an undefined variable.
-      msg: " tags are {{ tags }}, listtags {{ listtags}}" #  so here under name not avilable at any value we need to use this cmd 
+      msg: " hello {{ name }}"
