--- a/18-functions.yaml
+++ b/18-functions.yaml
@@ -22,6 +22,8 @@
       # msg: " Hello, {{ name }}" # error is : "The task includes an option with an undefined variable.
       msg: " Hello, {{ name | default('Srikanth') }}" #  so here under name not avilable at any value we need to use this cmd 
 
+# convert string to list 
+
   - name: convert string to list 
     ansible.builtin.debug:
       msg: " Fruits are : {{ fruits | split(',') }}"
