--- a/15-loops.yaml
+++ b/15-loops.yaml
@@ -3,7 +3,7 @@
   connection: local
   tasks:
   - name: print names
-    ansible.builtin.debug:
+    ansible.builtin.debug: # this the module for excute
       msg: "Hello {{ item }}" # item is reserved it means item lo ki one by one name anedhi vachhi print avuthundhi.
     loop:
     - Ramesh
