--- a/04-vars.yaml
+++ b/04-vars.yaml
@@ -7,5 +7,5 @@
     Trainer: Srikanth Reddy
   tasks: 
   - name: print the course info
-    ansible.builtin.debug: # this is used to print the info whatever has in tasks
+    ansible.builtin.debug: # this is used to print the info whatever has in tasks # this the module for excute
       msg: "Course name is: {{ COURSE }}, Duration is {{ DURATION }}, Trainer name is {{ Trainer }}"
