--- a/18-all-types-functions.yaml
+++ b/18-all-types-functions.yaml
@@ -42,7 +42,7 @@
 # read yaml and take it into variable
 
   - name: read yaml and take it into variable
-    ansible.builtin.set_fact: # this the module for excute
+    ansible.builtin.set_fact: # this the module for excute ... vars ni define cheyatum dynamic ga 
       student_yaml: "{{ lookup('file', 'student.yaml') | from_yaml }}" # so here student.yaml file lo vuna content antha key varivale loki velli store avuthundi
 
   - name: convert yaml into json
@@ -67,7 +67,7 @@
       msg: "{{ ipaddress | ansible.utils.ipv4 }}"
 
   - name: grep for root
-    ansible.builtin.shell: cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we need shell 
+    ansible.builtin.shell: cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we are used shell cmd 
     #ansible.builtin.command: #cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we need shell 
     register: command_output # here cat /etc/passwd | grep root -- idi excute ayyi command_output loki vachhi store avuthundhi
   
