--- a/18-8-shell-cmduse.yaml
+++ b/18-8-shell-cmduse.yaml
@@ -3,8 +3,8 @@
   connection: local
   tasks:
   - name: grep for root
-    #ansible.builtin.shell: cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we are used shell cmd 
-    ansible.builtin.command: cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we need shell 
+    ansible.builtin.shell: cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we are used shell cmd 
+    #ansible.builtin.command: cat /etc/passwd | grep root # here command ani name tho excute avvaledhu so we need shell 
     register: command_output # here cat /etc/passwd | grep root -- idi excute ayyi command_output loki vachhi store avuthundhi
 
   - name: print the command_output
