--- a/18-8-shell-cmduse.yaml
+++ b/18-8-shell-cmduse.yaml
@@ -22,3 +22,14 @@
   - name: print redirect_output
     ansible.builtin.debug:
       msg: "{{ redirect_output }}"
+  
+
+# EX 3:
+
+  - name: redirect the output using shell 
+    ansible.builtin.shell: ls -ltr > /tmp/output.txt
+    register: redirect_output
+
+  - name: print redirect_output shell
+    ansible.builtin.debug:
+      msg: "{{ redirect_output }}"
