--- a/18-8-shell-cmduse.yaml
+++ b/18-8-shell-cmduse.yaml
@@ -27,7 +27,7 @@
 # EX 3:
 
   - name: redirect the output using shell 
-    ansible.builtin.shell: ls -ltr > /tmp/output.txt
+    ansible.builtin.shell: ls -ltr #> /tmp/output.txt
     register: redirect_output
 
   - name: print redirect_output shell
