--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -6,9 +6,8 @@
   # List of tasks/collections/modules
   tasks: # so here antha same place lo one by one vundali
   - name: ping
-    ansible.builtin.ping: 
-    #{The ansible.builtin.ping module is a core Ansible module used to test the connectivity and 
-    #basic functionality between the Ansible control node and the managed hosts. It is a fundamental tool for verifying that #Ansible can successfully communicate with and execute commands on remote systems. }
+    ansible.builtin.ping:  # see in notes
+
 ###################################################
 
 # {so here before : we callled keys.... and after : we called as values... so manam key anevi change 
