--- a/06-vars-files.yaml
+++ b/06-vars-files.yaml
@@ -7,3 +7,5 @@
   - name: print the course info
     ansible.builtin.debug:
       msg: "Course name is: {{ COURSE }}, Duration is {{ DURATION }}, Trainer name is {{ Trainer }}"
+
+     # msg: "Course name is: {{ course.yaml }} " need to run this for my reference....
