--- a/18-5-read-into-vars.yaml
+++ b/18-5-read-into-vars.yaml
@@ -1,18 +1,24 @@
 - name: functions
   hosts: local
   connection: local
-  tasks:
+  tasks: # Formatting data: YAML and JSON
   - name: read yaml and take it into variable
     ansible.builtin.set_fact: # # this the module for excute ... vars ni define cheyatum dynamic ga 
     # this the module for excute 
-      student_yaml: "{{ lookup('file', 'student.yaml') | from_yaml }}" # so here student.yaml file lo vuna content antha key varivale loki velli store avuthundi
+      student_yaml: "{{ lookup('file', 'student.yaml') | from_yaml }}" # see in notes
 # convert yaml into json
   - name: convert yaml into json
     ansible.builtin.debug: # this the module for excute
-      msg: "json is : {{ student_yaml | to_json  }}"
+      msg: "json is : {{ student_yaml | to_json  }}" # see in notes
 
       # save json to file
   - name: save json to file
     ansible.builtin.copy:
-      dest: ./student-data1.json
-      content: "{{ student_yaml | to_nice_json  }}"
+      dest: ./student-data1.json # ee name tho file create ayyi data anedhi save avuthundhi
+      content: "{{ student_yaml | to_nice_json  }}" # For human readable output, you can use: to_nice_json
+
+      # student_yaml so ee file lo vunde content dest ni file lo veelu ani cheptunam 
+
+
+      # FOR SYNATX 
+#  https://docs.ansible.com/projects/ansible/latest/playbook_guide/playbooks_filters.html
