--- a/inventory.ini
+++ b/inventory.ini
@@ -12,8 +12,8 @@
 [local]
 local
 
-[local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
-NAME=from inventory
-COURSE=Ansible
-DURATION=10HRS
-TRAINER=Sivakumar
+# [local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
+# NAME=from inventory
+# COURSE=Ansible
+# DURATION=10HRS
+# TRAINER=Sivakumar
