--- a/inventory.ini
+++ b/inventory.ini
@@ -10,7 +10,7 @@
 172.31.75.99
 
 [local]
-local
+localhost
 
 # [local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
 # NAME=from inventory
