--- a/inventory.ini
+++ b/inventory.ini
@@ -11,6 +11,8 @@
 
 [local]
 localhost
+#local # [WARNING]: Found both group and host with same name: local
+#so ila WARNING istundhi anthe gani emi kadhu we can use local
 
 # [local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
 # NAME=from inventory
