--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -5,10 +5,11 @@
   - name: username
     prompt: What is your username?
     private: true # false ani vunte enter chestunte name visible avuthundhi..... True vunte after excute it will be visible...
-  - name: password # so here will get error  see in notes
-    prompt: what is your password
-    private: false # so here false ani vunte enter chesetappudu visible avuthundhi, adhe true ani vunte wont visible
+  # - name: password # so here will get error  see in notes
+  #   prompt: what is your password
+  #   private: false # so here false ani vunte enter chesetappudu visible avuthundhi, adhe true ani vunte wont visible
   tasks: 
-    - name: print credentials
-      ansible.builtin.debug:
-        msg: "Hello, Username is: {{ username }} Password is: {{ password }}"
+  - name: print credentials
+    ansible.builtin.debug:
+      #msg: "Hello, Username is: {{ username }} Password is: {{ password }}"
+      msg: "Hello, Username is: {{ username }} "
