--- a/inventory.ini
+++ b/inventory.ini
@@ -14,8 +14,9 @@ localhost
 #local # [WARNING]: Found both group and host with same name: local
 #so ila WARNING istundhi anthe gani emi kadhu we can use local
 
-# [local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
-# NAME=from inventory
-# COURSE=Ansible
-# DURATION=10HRS
-# TRAINER=Sivakumar
+
+#[local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
+ NAME=from inventory
+ COURSE=Ansible
+ DURATION=10HRS
+ TRAINER=Sivakumar  
