--- a/inventory.ini
+++ b/inventory.ini
@@ -15,7 +15,7 @@ localhost
 #so ila WARNING istundhi anthe gani emi kadhu we can use local
 
 
-#[local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
+[local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
  NAME=from inventory
  COURSE=Ansible
  DURATION=10HRS
