--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -7,4 +7,4 @@
   - name: check number is less than 10 or not
     ansible.builtin.debug:
       msg: "Given number {{ number }} is less than 10"
-    when: number == 10 # syntax https://docs.ansible.com/projects/ansible/latest/playbook_guide/playbooks_conditionals.html
+    when: number > 10 # syntax https://docs.ansible.com/projects/ansible/latest/playbook_guide/playbooks_conditionals.html
