--- a/18-1-default-vars.yaml
+++ b/18-1-default-vars.yaml
@@ -4,8 +4,8 @@
   tasks: 
   - name: default vars
     ansible.builtin.debug: # this the module for excute
-      #msg: " hello {{ name }}" # see in google doc error tab
-      msg: " hello {{ name| default('Srikanth') }}" 
+      msg: " hello {{ name }}" # see in google doc error tab
+      #msg: " hello {{ name| default('Srikanth') }}" 
 
 # FOR SYNATX 
 #  https://docs.ansible.com/projects/ansible/latest/playbook_guide/playbooks_filters.html
