--- a/18-7-ip-valid.yaml
+++ b/18-7-ip-valid.yaml
@@ -2,14 +2,15 @@
   hosts: local
   connection: local
   vars: # IP address filters
-    ipaddress: "253.23737.0.1"
+    #ipaddress: "253.23737.0.1" # false
+     ipaddress: "172.31.76.136"
   tasks:
   - name: check IP is valid or not
     ansible.builtin.debug: 
       msg: "{{ ipaddress | ansible.utils.ipv4 }}"
 # so ikkada ila run chetse something error vastundi like u need to install some library files then only it will be excute 
  # pip3.9 install netaddr ...... so we need to install this and run above cmd
-# invalid ithe msg lo false ani vastundi
+# invalid ithe msg lo false ani vastundi -- "msg": false
 # vaid ithe ip adress print avuthundhi 
 
 
