--- a/inventory.ini
+++ b/inventory.ini
@@ -19,4 +19,5 @@ localhost
  NAME=from inventory
  COURSE=Ansible
  DURATION=10HRS
- TRAINER=Sivakumar  
+ TRAINER=Sivakumar
+ # EX 1  [frontend:vars] so ila apply cheyachhu
