--- a/18-8-shell-cmduse.yaml
+++ b/18-8-shell-cmduse.yaml
@@ -13,29 +13,29 @@
   
 #   # EX2:
 
-#   - name: redirect the output
-#     #ansible.builtin.command: see below
-#     #{ls -ltr > /tmp/output.txt # so here redirections and complex cmd vunte command mode lo excute avvadu... se we need to use shell mode}
+  - name: redirect the output
+    #ansible.builtin.command: see below
+    #{ls -ltr > /tmp/output.txt # so here redirections and complex cmd vunte command mode lo excute avvadu... se we need to use shell mode}
 
-#     ansible.builtin.shell: ls -ltr > /tmp/output.txt
-#     register: redirect_output # ee varibale loki .... ls -ltr > /tmp/output.txt excute ayyi result vastundhi
-#     #ignore_errors: true # so ikkad ila pettatum valla manaki telus errro vatundhi ani ayina kuda procced avu cheptunam using igonore cmd tho
-# # so ikkada cmd ise cheste error vachhindi ... we need to use shell 
-#   - name: print redirect_output
-#     ansible.builtin.debug:
-#       msg: "{{ redirect_output }}"
+    ansible.builtin.shell: ls -ltr > /tmp/output.txt
+    register: redirect_output # ee varibale loki .... ls -ltr > /tmp/output.txt excute ayyi result vastundhi
+    #ignore_errors: true # so ikkad ila pettatum valla manaki telus errro vatundhi ani ayina kuda procced avu cheptunam using igonore cmd tho
+# so ikkada cmd ise cheste error vachhindi ... we need to use shell 
+  - name: print redirect_output
+    ansible.builtin.debug:
+      msg: "{{ redirect_output }}"
   
 
-# # EX 3:
+# EX 3:
 
-#   - name: redirect the output using shell 
-#     ansible.builtin.command: ls -ltr > /tmp/output.txt
-#     register: redirect_output
-#     ignore_errors: true # see in notes
+  - name: redirect the output using shell 
+    ansible.builtin.command: ls -ltr > /tmp/output.txt
+    register: redirect_output
+    ignore_errors: true # see in notes
 
-#   - name: print redirect_output shell
-#     ansible.builtin.debug:
-#       msg: "{{ redirect_output }}"
+  - name: print redirect_output shell
+    ansible.builtin.debug:
+      msg: "{{ redirect_output }}"
 
 
 # FOR SYNATX 
