--- a/inventory.ini
+++ b/inventory.ini
@@ -9,15 +9,15 @@
 [cart] # so iidhi kuda 
 172.31.12.107
 
-[local]
-localhost
-#local # [WARNING]: Found both group and host with same name: local
-#so ila WARNING istundhi anthe gani emi kadhu we can use local
+; [local]
+; localhost
+; #local # [WARNING]: Found both group and host with same name: local
+; #so ila WARNING istundhi anthe gani emi kadhu we can use local
 
 
-[local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
- NAME=from inventory
- COURSE=Ansible
- DURATION=10HRS
- TRAINER=Sivakumar
- # EX 1  [frontend:vars] so ila apply cheyachhu
+; [local:vars] # here aa grp ki ithe variables ni apply cheyalanukuntunnaro aa grp name next :vars ani ivvali 
+;  NAME=from inventory
+;  COURSE=Ansible
+;  DURATION=10HRS
+;  TRAINER=Sivakumar
+;  # EX 1  [frontend:vars] so ila apply cheyachhu
