--- a/practice.yaml
+++ b/practice.yaml
@@ -68,7 +68,7 @@
 #       msg: " hello {{ name | mandatory }}" # FAILED! => {"msg": "Mandatory variable 'name'  not defined."}
 
 # 01/03/26 Practice
-- name: Ping the server
+- name: "Ping the server"
   hosts: cart
   tasks: 
   - name: ping
