--- a/inventory.ini
+++ b/inventory.ini
@@ -6,7 +6,7 @@
 [frontend] # this is syntax, so idhi kuda oka grp 
 172.31.12.107 # ansible insatll chesina pvt ip ikkada ivvali 
 
-[ca] # so iidhi kuda 
+[cart] # so iidhi kuda 
 172.31.12.107
 
 [local]
