--- a/practice.yaml
+++ b/practice.yaml
@@ -85,7 +85,8 @@
 
 # and the below one is another play
 - name: PLAY-02
-  hosts: frontend
+  hosts: local
+  connection: local
   tasks:
   - name: PLAY-02 and TASK-01
     ansible.builtin.debug:
