--- a/practice.yaml
+++ b/practice.yaml
@@ -69,15 +69,19 @@
 
 # 01/03/26 Practice
 
-
-- name: ping
+- name: palybok-1
   hosts: local
   connection: local
   tasks:
-  - name: ping
-    ansible.builtin.ping: 
-
-
+  - name: palybok-1 and task-1
+    ansible.builtin.debug:
+      msg: "playbook-1"
+  - name: play-2 and taks-2
+    ansible.builtin.debug:
+      msg: "play-2"
+  - name: play-3
+    anisble.builtin.debug:
+      msg: "plsy03"
 
 
 
